# lib/api-spec/openapi.yaml
@@ -961,6 +961,9 @@ components:
           type: string
         createdAt:
           type: string
+        updatedAt:
+          type: string
+          nullable: true
 
     DecisionNoteInput:
       type: object
@@ -986,6 +989,9 @@ components:
           type: string
         createdAt:
           type: string
+        updatedAt:
+          type: string
+          nullable: true
 
     ProjectNote:
       type: object
@@ -1001,6 +1007,9 @@ components:
           type: string
         createdAt:
           type: string
+        updatedAt:
+          type: string
+          nullable: true
 
     NoteInput:
       type: object
